# kokoclone

./: README.md  app.py  cli.py  inference.py  pyproject.toml  requirements.txt
core/: cloner.py
